2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* src/main.cc: some beautification
	* src/main.h: made enums from #defines (are the values relevant?)

2003-08-06  Niklas Knutsson  <nq@altern.org>

	* Removed some debug output
	* Fix (x+y)^5, but unfortunately not (x+y)^6...
	* Even better unit conversion.
	* Change Ctrl+V to Ctrl+M for manage variables

2003-08-06  Sven Herzberg  <herzi@gnome-de.org>

	* Makefile.am: make dist works now
	* configure.in: added data/Makefile.am
	* data/.cvsignore: cvs update has less warnings now
	* data/Makefile.am: make dist works now, make install too
	* po/.cvsignore: cvs update has less warnings now

2003-08-06  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore: cvs update has less warnings now
	* Makefile.am: added data as subdir
	* acconfig.h: removed (templates are deprecated)
	* configure.in: added libtool
	* data/Makefile.am: added config file installation
	* po/.cvsignore: cvs update has less warnings now
	* src/.cvsignore: cvs update has less warnings now
	* src/Makefile.am: switched to libtool now
	* src/calclib/.cvsignore: cvs update has less warnings now
	* src/calclib/Makefile.am: using libtool now

2003-08-04  Niklas Knutsson  <nq@altern.org>

	* Optional arguments for functions
	* More functions...
	* Implemented if...then...else function
	* "config" -> "definition"
	* Added Execute button to insert function dialog
	* Added some financial functions