@@ -1,0 +1,12 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Qalculate!
+_Comment=Powerful and easy to use calculator
+Exec=qalculate
+Icon=gnome-calc3.png
+Terminal=false
+Type=Application
+StartupNotify=true
+Categories=GNOME;Application;Utility;
+Categories=Qt;KDE;Utility
+
