@@ -3,3 +3,5 @@ Makefile.in
 Makefile.in.in
 POTFILES
 qalculate-gtk.pot
+.intltool-merge-cache
+messages.mo
