@@ -1,5 +1,5 @@
 # List of source files containing translatable strings.
-
+data/qalculate.desktop.in
 src/main.cc
 src/interface.cc
 src/callbacks.cc
